--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="svg/products/actions/heart.svg" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="css/main.css">
     <title>test task</title>
 </head>
@@ -59,7 +59,7 @@
     </main>
 
     <section class="movies-section">
-        <div class="list-films first-filter"></div>
+        <ul class="list-films first-filter"></ul>
         <div class="change-films">
             <div class="container">
                 <p>Most popular</p>
@@ -76,7 +76,7 @@
 
     <section class="list-view">
         <div class="container">
-            <div class="items"></div>
+            <ul class="items"></ul>
             <div class="arrows">
                 <img src="svg/verticali-slider-arrows.svg" alt="" class="prev">
                 <img src="svg/verticali-slider-arrows.svg" alt="" class="next">
@@ -89,12 +89,8 @@
         <p class="info-footer">FAQ | Feedback | Contact | T&Cs | Privacy Policy</p>
         <p class="copyright">Copyright 2016 - All Rights Reserved</p>
     </footer>
-
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="script.js"></script>
 </body>
 
